--- a/www/superciata/Processa_CNEFE.html
+++ b/www/superciata/Processa_CNEFE.html
@@ -336,33 +336,45 @@
 
       const formData = new FormData();
       formData.append("arqCnefe", file);
+      closeFileInput();
 
       try {
+        let resp = '';
+
+        addReportMessage("Criando tabela CN_PONTOS.");
+
+        resp = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_PONTOS`, {
+          method: "GET"
+        });
+
+        resp = await resp.json();
+        addReportMessage("Tabela CN_PONTOS criada:\n" + JSON.stringify(resp, null, 2));
+
         addReportMessage("Enviando arquivo...");
         if (uploadBtn) {
           uploadBtn.disabled = true;
           uploadBtn.textContent = "Enviando...";
         }
 
-        let response = await fetch("https://smuu.com.br:21079/superciata/carrega_CNEFE", {
+        resp = await fetch("https://smuu.com.br:21079/superciata/carrega_CNEFE", {
           method: "POST",
           body: formData
         });
 
-        if (!response.ok) {
-          const errorText = await response.text();
-          throw new Error(`Erro HTTP: ${response.status} ${response.statusText}\n${errorText}`);
+        if (!resp.ok) {
+          const errorText = await resp.text();
+          throw new Error(`Erro HTTP: ${resp.status} ${resp.statusText}\n${errorText}`);
         }
 
         let nmArquivoCSV = file.name.replace(/\.zip/i, '.csv');
         addReportMessage("Arquivo CSV esperado: " + nmArquivoCSV);
         const cod_municipio = nmArquivoCSV.substring(0, 7); // Código do município do IBGE com 7 algarismos
 
-        response = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_PONTOS?arquivo=${encodeURIComponent(nmArquivoCSV)}`, {
+        resp = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_PONTOS?arquivo=${encodeURIComponent(nmArquivoCSV)}`, {
           method: "GET"
         });
 
-        const data = await response.json();
+        const data = await resp.json();
         addReportMessage("Upload realizado com sucesso:\n" + JSON.stringify(data, null, 2));
 
         await preparaCNEFE(cod_municipio);
@@ -398,55 +410,55 @@
 
     async function criaCN_PONTOS_UNICOS() {
       addReportMessage("Criando tabela CN_PONTOS_UNICOS...");
-      const response = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_PONTOS_UNICOS`, {
+      const resp = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_PONTOS_UNICOS`, {
         method: "GET"
       });
-      const relat = await response.json();
+      const relat = await resp.json();
       addReportMessage("Resultado criação: " + JSON.stringify(relat, null, 2));
     }
 
     async function preencheCN_PONTOS_UNICOS(cod_municipio) {
       addReportMessage("Preenchendo CN_PONTOS_UNICOS...");
-      const response = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_PONTOS_UNICOS?cod_municipio=${encodeURIComponent(cod_municipio)}`, {
+      const resp = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_PONTOS_UNICOS?cod_municipio=${encodeURIComponent(cod_municipio)}`, {
         method: "GET"
       });
-      const relat = await response.json();
+      const relat = await resp.json();
       addReportMessage("Resultado preenchimento: " + JSON.stringify(relat, null, 2));
     }
 
     async function criaCN_QUADRAS() {
       addReportMessage("Criando tabela CN_QUADRAS...");
-      const response = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_QUADRAS`, {
+      const resp = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_QUADRAS`, {
         method: "GET"
       });
-      const relat = await response.json();
+      const relat = await resp.json();
       addReportMessage("Resultado criação: " + JSON.stringify(relat, null, 2));
     }
 
     async function preencheCN_QUADRAS(cod_municipio) {
       addReportMessage("Preenchendo CN_QUADRAS...");
-      const response = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_QUADRAS?cod_municipio=${encodeURIComponent(cod_municipio)}`, {
+      const resp = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_QUADRAS?cod_municipio=${encodeURIComponent(cod_municipio)}`, {
         method: "GET"
       });
-      const relat = await response.json();
+      const relat = await resp.json();
       addReportMessage("Resultado preenchimento: " + JSON.stringify(relat, null, 2));
     }
 
     async function criaCN_FACES() {
       addReportMessage("Criando tabela CN_FACES...");
-      const response = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_FACES`, {
+      const resp = await fetch(`https://smuu.com.br:21079/superciata/cria_CN_FACES`, {
         method: "GET"
       });
-      const relat = await response.json();
+      const relat = await resp.json();
       addReportMessage("Resultado criação: " + JSON.stringify(relat, null, 2));
     }
 
     async function preencheCN_FACES(cod_municipio) {
       addReportMessage("Preenchendo CN_FACES...");
-      const response = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_FACES?cod_municipio=${encodeURIComponent(cod_municipio)}`, {
+      const resp = await fetch(`https://smuu.com.br:21079/superciata/preenche_CN_FACES?cod_municipio=${encodeURIComponent(cod_municipio)}`, {
         method: "GET"
       });
-      const relat = await response.json();
+      const relat = await resp.json();
       addReportMessage("Resultado preenchimento: " + JSON.stringify(relat, null, 2));
     }
 
