--- a/www/superciata/index.html
+++ b/www/superciata/index.html
@@ -4,9 +4,9 @@
 <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <title>Superciata — Geoespacialização Urbana</title>
+   <title>Superciata — Georreferenciamento de Cadastro Urbano Fit-for-purpose para CTM.</title>
    <meta name="description"
-      content="Geointeligência urbana: integração de cadastro territorial e CNEFE, mapeamento, detecção de mudanças e inteligência fiscal." />
+      content="A metodologia Fit-for-Purpose oferece a base para integrar o georreferenciamento de baixo custo no Cadastro Urbano, viabilizando a rápida implementação e manutenção do CTM." />
    <style>
       :root {
          --bg: #fff;
@@ -232,7 +232,7 @@
          <img src="imagens/Logo%20SuperCIATA.png" alt="SuperCIATA - Geoespacialização Urbana">
       </div>
       <nav>
-         <a href="#servicos">Serviços</a>
+         <a href="#etapas">Etapas</a>
          <a href="#tecnologia">Tecnologia</a>
          <a href="#cases">Cases</a>
          <a href="#contato">Contato</a>
@@ -249,7 +249,7 @@
             <p>Integração de endereços do CNEFE, malha cadastral e bases geográficas livres para espacializar áreas
                urbanas.</p>
             <div class="hero-actions">
-               <a class="btn primary" href="#servicos">Explorar serviços</a>
+               <a class="btn primary" href="#etapas">Iniciar Etapas</a>
                <a class="btn" href="#destaques">Ver destaques</a>
             </div>
          </div>
@@ -259,18 +259,18 @@
       </div>
    </section>
 
-   <!-- Serviços -->
-   <section class="section" id="servicos">
-      <h2>Serviços</h2>
+   <!-- Etapas -->
+   <section class="section" id="etapas">
+      <h2>Etapas</h2>
       <p class="lead">Aplicações que oferecem visão completa sobre o território urbano.</p>
       <div class="cards">
          <div class="card">
-            <a href="https://superciata.smuu.com.br/Processa_CNEFE.html"
+            <a href="https://superciata.smuu.com.br/Carrega_Dados.html"
                style="text-decoration:none; color:inherit; display:block">
-               <img src="imagens/CNEFE.jpg" alt="">
+               <img src="imagens/Carga_de_Bases_de_Dados.jpg" alt="">
                <div class="content">
-                  <h3>Mapeamento Territorial</h3>
-                  <p>Visualizar Resultados</p>
+                  <h3>Carga de Bases de Dados</h3>
+                  <p>Carregar arquivos do CNEFE e do Cadastro Municipal</p>
                </div>
             </a>
          </div>
