Visualização dos mapas

--- a/www/superciata/index.html
+++ b/www/superciata/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <title>Superciata — Georreferenciamento de Cadastro Urbano Fit-for-purpose para CTM.</title>
+   <title>SuperCIATA — Georreferenciamento de Cadastro Urbano Fit-for-purpose para CTM.</title>
    <meta name="description"
       content="A metodologia Fit-for-Purpose oferece a base para integrar o georreferenciamento de baixo custo no Cadastro Urbano, viabilizando a rápida implementação e manutenção do CTM." />
    <style>
@@ -265,7 +265,7 @@
       <p class="lead">Aplicações que oferecem visão completa sobre o território urbano.</p>
       <div class="cards">
          <div class="card">
-            <a href="https://superciata.smuu.com.br/Carrega_Dados.html"
+            <a href="https://superciata.smuu.com.br/carrega_dados.html"
                style="text-decoration:none; color:inherit; display:block">
                <img src="imagens/Carga_de_Bases_de_Dados.jpg" alt="">
                <div class="content">
@@ -275,12 +275,14 @@
             </a>
          </div>
          <div class="card">
-            <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?q=80&w=1600&auto=format&fit=crop"
-               alt="">
-            <div class="content">
-               <h3>Integração CNEFE</h3>
-               <p>Geocodificação de endereços e vinculação ao cadastro municipal.</p>
-            </div>
+            <a href="https://superciata.smuu.com.br/visualiza_mapas.html"
+               style="text-decoration:none; color:inherit; display:block">
+               <img src="imagens/Visualizacao_Pontos.png" alt="">
+               <div class="content">
+                  <h3>Visualização de Mapas</h3>
+                  <p>Visualizar os resultados do processamento.</p>
+               </div>
+            </a>
          </div>
          <div class="card">
             <a href="documentos.html" style="text-decoration:none; color:inherit; display:block">
