--- a/www/superciata/index.html
+++ b/www/superciata/index.html
@@ -2,331 +2,277 @@
 <html lang="pt-BR">
 
 <head>
-   <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <title>SuperCIATA — Georreferenciamento de Cadastro Urbano Fit-for-purpose para CTM.</title>
-   <meta name="description"
-      content="A metodologia Fit-for-Purpose oferece a base para integrar o georreferenciamento de baixo custo no Cadastro Urbano, viabilizando a rápida implementação e manutenção do CTM." />
-   <style>
-      :root {
-         --bg: #fff;
-         --muted: #444;
-         --brand: #004aad;
-         --brand-2: #00b4d8;
-         --text: #111;
-         --ring: rgba(0, 74, 173, .35);
-      }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SuperCIATA — Georreferenciamento de Cadastro Urbano Fit-for-purpose</title>
+  <meta name="description"
+    content="A metodologia Fit-for-Purpose oferece a base para integrar o georreferenciamento de baixo custo no Cadastro Urbano, viabilizando a rápida implementação e manutenção do CTM." />
+  <style>
+    :root {
+      --bg: #fff;
+      --muted: #444;
+      --brand: #004aad;
+      --brand-2: #00b4d8;
+      --text: #111;
+      --ring: rgba(0, 74, 173, .35);
+    }
 
-      * {
-         box-sizing: border-box
-      }
+    * {
+      box-sizing: border-box
+    }
 
-      html,
-      body {
-         margin: 0;
-         height: 100%;
-         font-family: Inter, system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-         background: var(--bg);
-         color: var(--text);
-      }
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
 
-      a {
-         color: inherit;
-         text-decoration: none
-      }
+    header {
+      background: #fff;
+      border-bottom: 1px solid #eee;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 40px;
+    }
 
-      img {
-         max-width: 100%;
-         display: block
-      }
+    header .logo img {
+      height: 48px;
+    }
 
-      .container {
-         max-width: 1200px;
-         margin: 0 auto;
-         padding: 0 24px
-      }
+    nav a {
+      margin-left: 24px;
+      color: #222;
+      text-decoration: none;
+      font-size: 15px;
+      font-weight: 500;
+    }
 
-      header {
-         background: #fff;
-         border-bottom: 1px solid #eee;
-         position: sticky;
-         top: 0;
-         z-index: 1000;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         padding: 10px 40px;
-      }
+    nav a:hover {
+      color: #0073e6;
+    }
 
-      header .logo img {
-         height: 48px;
-         width: auto;
-      }
+    .hero {
+      background: linear-gradient(180deg, #eef6ff, #fff);
+      padding: 50px 20px 20px;
+      text-align: center;
+    }
 
-      nav a {
-         margin-left: 24px;
-         color: #222;
-         text-decoration: none;
-         font-size: 15px;
-         font-weight: 500;
-      }
+    .hero h1 {
+      font-size: clamp(28px, 4.5vw, 56px);
+      line-height: 1.1;
+      color: var(--brand);
+      margin-bottom: 10px;
+    }
 
-      nav a:hover {
-         color: #0073e6;
-      }
+    .hero p {
+      color: var(--muted);
+      font-size: 17px;
+      margin-bottom: 20px;
+    }
 
-      /* Hero */
-      .hero {
-         background: linear-gradient(180deg, #eef6ff, #fff)
-      }
+    .municipio-box {
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      background: #fafafa;
+      max-width: 480px;
+      margin: 0 auto 40px;
+      padding: 20px;
+      text-align: center;
+    }
 
-      .hero-grid {
-         display: grid;
-         grid-template-columns: 1fr;
-         gap: 28px;
-         padding: 56px 0
-      }
+    .municipio-box h3 {
+      color: var(--brand);
+      margin-bottom: 10px;
+    }
 
-      @media(min-width:980px) {
-         .hero-grid {
-            grid-template-columns: 1.05fr .95fr;
-            align-items: center;
-            padding: 86px 0
-         }
-      }
+    .municipio-box span {
+      display: inline-block;
+      margin: 6px 0;
+      color: var(--brand);
+      font-weight: 600;
+    }
 
-      .hero h1 {
-         font-size: clamp(28px, 4.5vw, 56px);
-         line-height: 1.08;
-         margin: 0 0 12px
-      }
+    .municipio-box button {
+      background: #0073e6;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
 
-      .hero p {
-         color: var(--muted);
-         font-size: clamp(15px, 1.8vw, 18px)
-      }
+    .municipio-box button:hover {
+      background: #004aad;
+    }
 
-      .hero-actions {
-         display: flex;
-         flex-wrap: wrap;
-         gap: 12px;
-         margin-top: 18px
-      }
+    .section {
+      padding: 60px 40px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
 
-      .btn {
-         padding: 12px 18px;
-         border-radius: 14px;
-         border: 1px solid #ccc;
-         background: #f5f5f5;
-         text-decoration: none;
-         font-weight: 500;
-         color: #111
-      }
+    .section h2 {
+      text-align: center;
+      font-size: 32px;
+      margin-bottom: 10px;
+      color: var(--brand);
+    }
 
-      .btn.primary {
-         background: var(--brand);
-         color: #fff;
-         border-color: transparent
-      }
+    .section p.lead {
+      text-align: center;
+      color: #555;
+      margin-bottom: 50px;
+      font-size: 17px;
+    }
 
-      .hero-visual {
-         border-radius: 18px;
-         overflow: hidden;
-         border: 1px solid #ddd;
-         box-shadow: 0 20px 40px rgba(0, 0, 0, .15)
-      }
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 30px;
+    }
 
-      .hero-visual img {
-         aspect-ratio: 16/9;
-         object-fit: cover
-      }
-
-      /* Section */
-      .section {
-         padding: 80px 40px;
-         max-width: 1200px;
-         margin: 0 auto
-      }
-
-      .section h2 {
-         font-size: 34px;
-         margin-bottom: 18px;
-         text-align: center
-      }
-
-      .section p.lead {
-         font-size: 18px;
-         color: #555;
-         margin-bottom: 50px;
-         text-align: center
-      }
-
-      /* Cards */
+    @media(min-width:800px) {
       .cards {
-         display: grid;
-         grid-template-columns: 1fr;
-         gap: 30px
+        grid-template-columns: repeat(3, 1fr);
       }
+    }
 
-      @media(min-width:800px) {
-         .cards {
-            grid-template-columns: repeat(3, 1fr)
-         }
-      }
+    .card {
+      border: 1px solid #eee;
+      border-radius: 8px;
+      overflow: hidden;
+      background: #fff;
+      transition: 0.3s;
+    }
 
-      .card {
-         border: 1px solid #eee;
-         border-radius: 6px;
-         overflow: hidden;
-         transition: transform 0.3s ease, box-shadow 0.3s ease;
-         cursor: pointer;
-         background: #fff
-      }
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+    }
 
-      .card img {
-         width: 100%;
-         height: 220px;
-         object-fit: cover
-      }
+    .card img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+    }
 
-      .card .content {
-         padding: 24px
-      }
+    .card .content {
+      padding: 22px;
+    }
 
-      .card h3 {
-         margin: 0 0 12px;
-         font-size: 20px
-      }
+    .card h3 {
+      margin: 0 0 10px;
+      font-size: 20px;
+      color: var(--brand);
+    }
 
-      .card p {
-         color: #555;
-         font-size: 15px
-      }
-
-      .card:hover {
-         transform: translateY(-6px);
-         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12)
-      }
-
-      /* Footer */
-      footer {
-         background: #111;
-         color: #aaa;
-         padding: 50px 30px;
-         text-align: center;
-         font-size: 14px
-      }
-
-      /* Focus */
-      a:focus-visible,
-      button:focus-visible {
-         outline: 2px solid var(--ring);
-         outline-offset: 2px
-      }
-   </style>
+    footer {
+      background: #111;
+      color: #aaa;
+      padding: 40px 30px;
+      text-align: center;
+      font-size: 14px;
+    }
+  </style>
 </head>
 
 <body>
-   <header>
-      <div class="logo">
-         <img src="imagens/Logo%20SuperCIATA.png" alt="SuperCIATA - Geoespacialização Urbana">
-      </div>
-      <nav>
-         <a href="#etapas">Etapas</a>
-         <a href="#tecnologia">Tecnologia</a>
-         <a href="#cases">Cases</a>
-         <a href="#contato">Contato</a>
-      </nav>
-   </header>
+  <header>
+    <div class="logo">
+      <img src="imagens/Logo%20SuperCIATA.png" alt="SuperCIATA - Geoespacialização Urbana">
+    </div>
+    <nav>
+      <a href="#etapas">Etapas</a>
+      <a href="#cases">Cases</a>
+      <a href="#contato">Contato</a>
+    </nav>
+  </header>
 
-   <!-- Hero -->
-   <section class="hero">
-      <div class="container hero-grid">
-         <div>
-            <h1>Geointeligência para cidades: espacialização do cadastro urbano com o <span
-                  style="color:var(--brand)">CNEFE</span>
-            </h1>
-            <p>Integração de endereços do CNEFE, malha cadastral e bases geográficas livres para espacializar áreas
-               urbanas.</p>
-            <div class="hero-actions">
-               <a class="btn primary" href="#etapas">Iniciar Etapas</a>
-               <a class="btn" href="#destaques">Ver destaques</a>
-            </div>
-         </div>
-         <div class="hero-visual">
-            <img src="imagens/Geointeligência.jpeg" alt="Imagem aérea urbana com camadas geoespaciais" />
-         </div>
-      </div>
-   </section>
+  <section class="hero">
+    <h1>SuperCIATA — Geointeligência Urbana</h1>
+    <p>Integração de endereços, quadras e lotes urbanos com dados abertos e livres.</p>
 
-   <!-- Etapas -->
-   <section class="section" id="etapas">
-      <h2>Etapas</h2>
-      <p class="lead">Aplicações que oferecem visão completa sobre o território urbano.</p>
-      <div class="cards">
-         <div class="card">
-            <a href="https://superciata.smuu.com.br/carrega_dados.html"
-               style="text-decoration:none; color:inherit; display:block">
-               <img src="imagens/Carga_de_Bases_de_Dados.jpg" alt="">
-               <div class="content">
-                  <h3>Carga de Bases de Dados</h3>
-                  <p>Carregar arquivos do CNEFE e do Cadastro Municipal</p>
-               </div>
-            </a>
-         </div>
-         <div class="card">
-            <a href="https://superciata.smuu.com.br/visualiza_mapas.html"
-               style="text-decoration:none; color:inherit; display:block">
-               <img src="imagens/Visualizacao_Pontos.png" alt="">
-               <div class="content">
-                  <h3>Visualização de Mapas</h3>
-                  <p>Visualizar os resultados do processamento.</p>
-               </div>
-            </a>
-         </div>
-         <div class="card">
-            <a href="documentos.html" style="text-decoration:none; color:inherit; display:block">
-               <img src="imagens/doc e cod.jpg" alt="Documentos e Códigos">
-               <div class="content">
-                  <h3>Documentos e Códigos</h3>
-                  <p>Documentos históricos, Códigos SQL e Javascript e Papers</p>
-               </div>
-            </a>
-         </div>
-      </div>
-   </section>
+    <div class="municipio-box">
+      <h3>Escolher Município</h3>
+      <p><b>Município selecionado:</b></p>
+      <span id="municipioAtual">Nenhum município selecionado</span><br>
+      <button id="btnEscolherMunicipio">Selecionar Município</button>
+    </div>
+  </section>
 
-   <!-- Cases -->
-   <section class="section" id="cases">
-      <h2>Cases</h2>
-      <p class="lead">Experiências aplicadas em municípios brasileiros.</p>
-      <div class="cards">
-         <div class="card">
-            <img src="https://images.unsplash.com/photo-1528901166007-3784c7dd3653?q=80&w=1600&auto=format&fit=crop"
-               alt="">
-            <div class="content">
-               <h3>Atualização Cadastral</h3>
-               <p>Detecção de edificações não registradas e incremento de arrecadação.</p>
-            </div>
-         </div>
-         <div class="card">
-            <img src="https://images.unsplash.com/photo-1526403228493-9ffcb09c43a7?q=80&w=1600&auto=format&fit=crop"
-               alt="">
-            <div class="content">
-               <h3>Planejamento Urbano</h3>
-               <p>Cenários de adensamento, mobilidade e uso do solo para gestores.</p>
-            </div>
-         </div>
+  <section class="section" id="etapas">
+    <h2>Etapas</h2>
+    <p class="lead">Aplicações que oferecem visão completa sobre o território urbano.</p>
+    <div class="cards">
+      <div class="card">
+        <a href="carrega_dados.html">
+          <img src="imagens/Carga_de_Bases_de_Dados.jpg" alt="">
+          <div class="content">
+            <h3>Carga de Bases de Dados</h3>
+            <p>Carregar arquivos do CNEFE e do Cadastro Municipal.</p>
+          </div>
+        </a>
       </div>
-   </section>
+      <div class="card">
+        <a href="visualiza_mapas.html">
+          <img src="imagens/Visualizacao_Pontos.jpg" alt="">
+          <div class="content">
+            <h3>Visualização de Mapas</h3>
+            <p>Visualizar os resultados do processamento.</p>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="documentos.html">
+          <img src="imagens/Acesso_Documentos.jpg" alt="">
+          <div class="content">
+            <h3>Documentos e Códigos</h3>
+            <p>Documentos, scripts e publicações técnicas.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
 
-   <!-- Footer -->
-   <footer>
-      © <span id="year"></span> Superciata — Geoespacialização Urbana
-   </footer>
-   <script>
-      document.getElementById('year').textContent = new Date().getFullYear();
-   </script>
+  <footer>
+    © <span id="year"></span> SuperCIATA — Geoespacialização Urbana
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Atualiza nome do município selecionado
+    function atualizarMunicipioAtual() {
+      const nome = localStorage.getItem('nome_municipio');
+      const uf = localStorage.getItem('uf_municipio');
+      const span = document.getElementById('municipioAtual');
+      span.textContent = nome && uf ? `${nome} (${uf})` : "Nenhum município selecionado";
+    }
+
+    // Botão escolher município
+    document.getElementById('btnEscolherMunicipio').addEventListener('click', () => {
+      const popup = window.open(
+        "escolher_municipio.html",
+        "popupMunicipio",
+        "width=420,height=480,resizable=no,scrollbars=no"
+      );
+      const timer = setInterval(() => {
+        if (popup.closed) {
+          clearInterval(timer);
+          atualizarMunicipioAtual();
+        }
+      }, 500);
+    });
+
+    document.addEventListener("DOMContentLoaded", atualizarMunicipioAtual);
+  </script>
 </body>
 
 </html>
